switched from openx to app nexus because of membership blocker

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Femi's Bidding System</title>
     <script src="assets/js/prebid.js"></script>
-</hesad>
+</head>
 <body>
     <h1>Building a Simplified Header Bidding System</h1>
     <!-- Ad Slots -->
-    <div id="div-gpt-ad-300x250"></div>
-    <div id="div-gpt-ad-728x90"></div>
+    <div id="div-gpt-ad-300x250" style="width: 300px; height: 250px;"></div>
+    <div id="div-gpt-ad-728x90" style="width: 728px; height: 90px;"></div>
 
     <!-- Include Main Script -->
     <script src="assets/js/main.js"></script>
