made fixes to the page rendering

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,4 +15,66 @@
 
     <script src="assets/js/main.js"></script>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Femi's Bidding System</title>
+    <link rel="stylesheet" href="assets/style/style.css">
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script src="assets/js/prebid.js"></script>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Femi's Bidding System</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>About This Page</h2>
+            <p>This web page demonstrates a simplified implementation of a header bidding system using Prebid.js and Google Publisher Tag (GPT). Advertisements are dynamically loaded to optimize revenue for publishers.</p>
+        </section>
+
+        <section>
+            <h2>Featured Ad - Mobile Size</h2>
+            <p>This is a 300x250 ad slot designed for mobile and desktop users. It uses real-time bidding (RTB) to fetch the best ad from multiple demand-side platforms (DSPs).</p>
+            <div class="ad-container">
+                <div id="div-gpt-ad-300x250">300x250 Ad Slot</div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Latest Updates</h2>
+            <p>Discover the latest updates in technology, advertising, and more. Stay tuned for our latest news and articles.</p>
+            <ul>
+                <li><strong>Article 1:</strong> Understanding Real-Time Bidding (RTB) for Publishers</li>
+                <li><strong>Article 2:</strong> The Evolution of Digital Advertising</li>
+                <li><strong>Article 3:</strong> How Prebid.js Transforms Ad Revenue</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Featured Ad - Banner</h2>
+            <p>This is a 728x90 banner ad slot optimized for desktop users. It allows advertisers to showcase their brand in a prominent position.</p>
+            <div class="ad-container">
+                <div id="div-gpt-ad-728x90">728x90 Ad Slot</div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Explore More Features</h2>
+            <p>Our system supports dynamic floor pricing, lazy loading, and advanced analytics integration. These features help publishers maximize ad revenue while improving user experience.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Femi's Bidding System. All rights reserved.</p>
+    </footer>
+
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
+
